tests/compile-fail/reserved/try_match_no_arms1.stderr
error: unexpected end of macro invocation
 --> tests/compile-fail/reserved/try_match_no_arms1.rs:2:44
  |
2 |     let _ = try_match::try_match!(Some(42),);
  |                                            ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$p:pat`
 --> src/lib.rs
  |
  |     ($in:expr, $(|)? $($p:pat)|+ $(if $guard:expr)? => $out:expr) => {
  |                        ^^^^^^
